--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,14 @@
             "scripts": []
           },
           "configurations": {
+            "fake": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.fake.ts"
+                }
+              ]
+            },
             "production": {
               "fileReplacements": [
                 {
@@ -65,6 +73,9 @@
             "browserTarget": "base-ng-app:build"
           },
           "configurations": {
+            "fake": {
+              "browserTarget": "base-ng-app:build:fake"
+            },
             "production": {
               "browserTarget": "base-ng-app:build:production"
             }
