--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
     "@angular/core": "~7.0.0",
-    "@angular/forms": "~7.0.0",
+    "@angular/forms": "^7.0.4",
     "@angular/http": "~7.0.0",
     "@angular/material": "^7.0.3",
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@datorama/akita": "^1.21.0",
+    "@ngx-formly/core": "^4.8.2",
+    "@ngx-formly/material": "^4.8.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.11",
@@ -34,6 +37,7 @@
     "@angular/cli": "~7.0.5",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
+    "@datorama/akita-ngdevtools": "^1.0.2",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/lodash": "^4.14.118",
