--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.11",
     "rxjs": "~6.3.3",
+    "uniqid": "^5.0.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -38,11 +39,14 @@
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
     "@datorama/akita-ngdevtools": "^1.0.2",
+    "@types/faker": "^4.1.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/lodash": "^4.14.118",
     "@types/node": "~8.9.4",
+    "@types/uniqid": "^4.1.2",
     "codelyzer": "~4.5.0",
+    "faker": "^4.1.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
