E2e test writing is in progress.

--- a/angular.json
+++ b/angular.json
@@ -133,6 +133,9 @@
           "configurations": {
             "production": {
               "devServerTarget": "base-ng-app:serve:production"
+            },
+            "local-withot-compiling": {
+              "protractorConfig": "e2e/protractor.conf.js"
             }
           }
         },
