--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "dev": " ng serve --configuration=dev --proxy-config proxy.conf.json --host 0.0.0.0",
     "start-fake": "ng serve --configuration=fake",
     "build": "ng build",
     "test": "ng test",
